--- a/proposal-talk-act2.tex
+++ b/proposal-talk-act2.tex
@@ -76,7 +76,7 @@
          \begin{itemize}
          \item Challenge 1: Planning each step is expensive.
          \item Challenge 2: Incongruent steps impede reuse.
-         \item Challenge 3: Coupled steps make you get stuck or plan ahead.
+         \item Challenge 3: Coupled steps require long planning horizons.
          \end{itemize}
       \end{minipage}};
    
@@ -1103,7 +1103,7 @@
          \begin{itemize}
          \item Challenge 1: Planning each step is expensive.
          \item Challenge 2: Incongruent steps impede reuse.
-         \item Challenge 3: Coupled steps make you get stuck or plan ahead.
+         \item Challenge 3: Coupled steps require long planning horizons.
          \end{itemize}
       \end{minipage}};
    
