--- a/proposal-talk.tex
+++ b/proposal-talk.tex
@@ -1,6 +1,7 @@
 \documentclass[serif]{beamer}
 
-\def\gridopacity{100}
+%\def\gridopacity{100}
+\def\gridopacity{0}
 
 \usepackage{multimedia}
 
@@ -95,8 +96,6 @@ Reuse-Informed Optimization of Planning Effort}
 \date{April 7, 2015}
 
 \begin{document}
-
-% HOW DOES IT FAIL?
 
 \input{proposal-talk-intro}
 
