--- a/proposal-talk-intro.tex
+++ b/proposal-talk-intro.tex
@@ -65,23 +65,35 @@
    \begin{tikzpicture}
       \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \node[fill=black,inner sep=1pt] at (3,6.3) {
+      \fill[black!80] (0.1,3.0) rectangle (11.9,6.6);
+
+      \node[fill=black,inner sep=1pt] at (3.1,4.8) {
          \movie[width=5.333333cm,height=3.00cm,
             loop,autostart]{}{chimp-trials-debris-fast.mp4}
       };
       
-      \node[fill=black,inner sep=1pt] at (9,6.3) {
+      \node[fill=black,inner sep=1pt] at (8.9,4.8) {
          \movie[width=5.333333cm,height=3.00cm,
             loop,autostart]{}{herb-tableclear-2-fast.mp4}
       };
+
+      %\node[fill=black,inner sep=1pt] at (3,6.3) {
+      %   \movie[width=5.333333cm,height=3.00cm,
+      %      loop,autostart]{}{chimp-trials-debris-fast.mp4}
+      %};
       
-      \node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (3,3.2) {
-         ARM-S Example?
-      };
+      %\node[fill=black,inner sep=1pt] at (9,6.3) {
+      %   \movie[width=5.333333cm,height=3.00cm,
+      %      loop,autostart]{}{herb-tableclear-2-fast.mp4}
+      %};
       
-      \node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (9,3.2) {
-         Other (PR-2) Example?
-      };
+      %\node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (3,3.2) {
+      %   ARM-S Example?
+      %};
+      
+      %\node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (9,3.2) {
+      %   Other (PR-2) Example?
+      %};
    
       %\hyperlinkmovie[play]{mylabel}{play}
 
@@ -99,7 +111,7 @@
                (d) at (7,0.85) {Onboard\\Motion\\Planner};
          }
          \only<2>{
-            \node[fill=green!20,rounded corners,align=center,minimum height=1.5cm]
+            \node[fill=green!50,rounded corners,align=center,minimum height=1.5cm]
                (d) at (7,0.85) {Onboard\\Motion\\Planner};
          }
          \draw[->,line width=1pt] (c) -- (d);
@@ -734,7 +746,7 @@
          \begin{itemize}
          \item Challenge 1: Planning each step is expensive.
          \item Challenge 2: Incongruent steps impede reuse.
-         \item Challenge 3: Coupled steps make you get stuck or plan ahead.
+         \item Challenge 3: Coupled steps require long planning horizons.
          \end{itemize}
       \end{minipage}};
    
